# gen_data

./: .gitignore  config.yaml  pyproject.toml  readme.md
setup/: environment.yaml
src/eda/: data_generation.py  data_generation2.py  data_perturbation.py  model.py
test/: test_data_generation.py
