[tool.poetry]
name = "model_explore"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "eda", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
